turtleart.circletwo.CircleTwo.scala.error
Erreur de compilation :
CircleTwo:15: error: ')' expected but '}' found.
} 
^